src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B</fullName>
        <description>This is the sales process for B2B</description>
        <isActive>true</isActive>
        <values>
            <fullName>Business Negotiation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Opportunity</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Legal Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualified Opportunity</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV_Quota_Retirement__c</fullName>
        <label>ACV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV__c</fullName>
        <description>Based on Contract Dates</description>
        <formula>IF( ISBLANK( Contract_Months_Calculated__c ) , NULL, IF(Contract_Months_Calculated__c  &lt;= 12, Amount, (Amount/Contract_Months_Calculated__c )*12) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Auto Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AM_Introduced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirms whether AM has been introduced</description>
        <inlineHelpText>Confirms whether AM has been introduced</inlineHelpText>
        <label>AM Introduced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Industry_From_Deal_Desk_Form__c</fullName>
        <inlineHelpText>Account Industry As Selected on Deal Desk Forn</inlineHelpText>
        <label>Account Industry From Deal Desk Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Model__c</fullName>
        <description>Account Model for B2B Opportunities</description>
        <label>Account Model</label>
        <picklist>
            <picklistValues>
                <fullName>Decentralized Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decentralized Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralized Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralized Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Allowing account plans to be linked to opportunities</description>
        <inlineHelpText>URL for Account Plan</inlineHelpText>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Actual_Launch_Date__c</fullName>
        <label>Actual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Considerations_Concerns__c</fullName>
        <description>Additional Considerations/Concerns B2B Opportunities</description>
        <label>Additional Considerations/Concerns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Day_to_Day_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin/Day to Day Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities where PoC</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annualized_Amount_USD_Unweighted__c</fullName>
        <description>ARR - unweighted and hidden</description>
        <formula>if(or(isblank( Contract_Start_Date__c )=true,isblank(Contract_End_Date__c )=true),  Amount  ,

Amount/(Contract_Months_Calculated__c/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR - unweighted and hidden</inlineHelpText>
        <label>Annualized Amount (USD) Unweighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Amount_USD__c</fullName>
        <formula>if(or(isblank( Contract_Start_Date__c )=true,isblank(Contract_End_Date__c )=true), ExpectedRevenue ,

ExpectedRevenue/(Contract_Months_Calculated__c/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>B2B: ARR for a given deal</inlineHelpText>
        <label>Annualized Amount (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_Custom__c</fullName>
        <description>First day of the close date quarter</description>
        <formula>if(year(CloseDate)=2016, 
if(month(CloseDate)=1,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=2,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=3,CloseDate-day(CloseDate)-29-31+1, 
if(month(CloseDate)=4,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=5,CloseDate-day(CloseDate)-30+1, 
if(month(CloseDate)=6,CloseDate-day(CloseDate)-31-30+1, 
if(month(CloseDate)=7,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=8,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=9,CloseDate-day(CloseDate)-31-31+1, 
if(month(CloseDate)=10,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=11,CloseDate-day(CloseDate)-31+1, 
CloseDate-day(CloseDate)-30-31+1))))))))))), 
if(month(CloseDate)=1,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=2,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=3,CloseDate-day(CloseDate)-28-31+1, 
if(month(CloseDate)=4,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=5,CloseDate-day(CloseDate)-30+1, 
if(month(CloseDate)=6,CloseDate-day(CloseDate)-31-30+1, 
if(month(CloseDate)=7,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=8,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=9,CloseDate-day(CloseDate)-31-31+1, 
if(month(CloseDate)=10,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=11,CloseDate-day(CloseDate)-31+1, 
CloseDate-day(CloseDate)-30-31+1))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First day of the close date quarter</inlineHelpText>
        <label>Close Date (Custom)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_in_Current_Quarter__c</fullName>
        <description>If the quarter of the close date matches the current quarter, then true; otherwise false</description>
        <formula>OR(MONTH(TODAY())=MONTH(CloseDate),
AND(OR(MONTH(TODAY())=1,MONTH(TODAY())=2,MONTH(TODAY())=3),OR(MONTH(CloseDate)=1,MONTH(CloseDate)=2,MONTH(CloseDate)=3)),
AND(OR(MONTH(TODAY())=4,MONTH(TODAY())=5,MONTH(TODAY())=6),OR(MONTH(CloseDate)=4,MONTH(CloseDate)=5,MONTH(CloseDate)=6)),
AND(OR(MONTH(TODAY())=7,MONTH(TODAY())=8,MONTH(TODAY())=9),OR(MONTH(CloseDate)=7,MONTH(CloseDate)=8,MONTH(CloseDate)=9)),
AND(OR(MONTH(TODAY())=10,MONTH(TODAY())=11,MONTH(TODAY())=12),OR(MONTH(CloseDate)=10,MONTH(CloseDate)=11,MONTH(CloseDate)=12)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the quarter of the close date matches the current quarter, then true; otherwise false</inlineHelpText>
        <label>Close Date in Current Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_in_Previous_Quarter_CY__c</fullName>
        <description>True if the close date is in a previous quarter from the same year, otherwise false</description>
        <formula>OR(
AND(MONTH(TODAY())&gt;=4,MONTH(CloseDate)&lt;4), 
AND(MONTH(TODAY())&gt;=7,MONTH(CloseDate)&lt;7), 
AND(MONTH(TODAY())&gt;=10,MONTH(CloseDate)&lt;10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the close date is in a previous quarter from the same year, otherwise false</inlineHelpText>
        <label>Close Date in Previous Quarter (CY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Detail__c</fullName>
        <label>Closed Won Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Reason__c</fullName>
        <label>Closed Won Reason</label>
        <picklist>
            <picklistValues>
                <fullName>University brands and certificates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breadth and depth of content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content catered to customer&apos;s need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacing existing eLearning Platform/Tool/Content provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to curate catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing learner familiarity/demand of Coursera inside company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific content need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand/prestige of Coursera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Quality</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_Domain__c</fullName>
        <description>Primary content area or category on Coursera platform</description>
        <inlineHelpText>Primary content area or category on Coursera platform</inlineHelpText>
        <label>Content Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Creative/Arts &amp; Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech/Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/Data Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math &amp; Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Development/Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Science &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Sciences</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Selected__c</fullName>
        <label>Content Selected</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Sourcing__c</fullName>
        <description>Content Sourcing for B2B Opportunties</description>
        <label>Content Sourcing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Date on which the contract ends (B2B)</description>
        <inlineHelpText>Date on which the contract ends</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Months_Calculated__c</fullName>
        <formula>round((Contract_End_Date__c -  Contract_Start_Date__c )/30.4375,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated # months on the contract</inlineHelpText>
        <label>Contract Months (Calculated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Date on which the contract goes in effect (active) - B2B</description>
        <inlineHelpText>Date on which the contract goes in effect (active)</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For B2B: Checked if opportunity was lost for pricing/cost reasons</description>
        <inlineHelpText>For B2B: Checked if opportunity was lost for pricing/cost reasons</inlineHelpText>
        <label>Cost/pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Content_Selection__c</fullName>
        <description>Course content selection for B2B opportunities</description>
        <label>Course Content Selection</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coursera_for_Enterprise_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is it coursera&apos;s legal form?</inlineHelpText>
        <label>Coursera for Enterprise Template?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_for_Reporting__c</fullName>
        <description>Used to report on created date pre and post data migration using simple report</description>
        <label>Created Date for Reporting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Terms_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected once deal terms have been reviewed/approved</description>
        <inlineHelpText>Selected once deal terms have been reviewed/approved</inlineHelpText>
        <label>Deal Terms Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Terms__c</fullName>
        <description>Primary deal terms to document (and/or need review/approval for)</description>
        <inlineHelpText>Primary deal terms to document (and/or need review/approval for)</inlineHelpText>
        <label>Deal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically selected if discount within volume bands; also automatically selected if over volume bands but approved via approval process</description>
        <inlineHelpText>Automatically selected if discount within volume bands; also automatically selected if over volume bands but approved via approval process</inlineHelpText>
        <label>Business Terms Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Size__c</fullName>
        <description>Employee Size for B2B opportunities</description>
        <label>Employee Size</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue_Temp__c</fullName>
        <label>ExpectedRevenue_Temp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Potential_Spend__c</fullName>
        <description>Future Potential Spend picklist on B2B Opportunities</description>
        <label>Future Potential Spend</label>
        <picklist>
            <picklistValues>
                <fullName>Identify Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Growth_Strategy__c</fullName>
        <label>Growth Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hand_Off_Notes__c</fullName>
        <label>Hand Off Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Pricing_Products__c</fullName>
        <inlineHelpText>Checked if the deal has pricing and products</inlineHelpText>
        <label># Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inbound_lead_request__c</fullName>
        <description>The original (self-described) request from lead, if inbound from the website</description>
        <inlineHelpText>The original (self-described) request from lead, if inbound from the website</inlineHelpText>
        <label>Inbound lead request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Deal_Desk_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden field which is auto populated when user submits the Deal Desk Form on opportunity via visualforce page Deal Desk Form</description>
        <label>Is Deal Desk Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_SLA_Language__c</fullName>
        <description>Is there SLA Language? picklist for B2B opportunities</description>
        <label>Is there SLA Language?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS__c</fullName>
        <label>LMS</label>
        <picklist>
            <picklistValues>
                <fullName>Adobe Captivate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornerstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossknowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homegrown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joomla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LearnCore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LearnDash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessonly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litmos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panopto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pluralsight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SilkRoad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skillsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuccessFactors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TalentLMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkDay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkRamp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Contractual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Outreach__c</fullName>
        <description>Outreach channel/ event via which the lead was identified before conversion</description>
        <inlineHelpText>Outreach event via which the lead was identified</inlineHelpText>
        <label>Lead Outreach</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>For B2B: primary distinction between inbound or outbound source</description>
        <inlineHelpText>For B2B: primary distinction between inbound or outbound source</inlineHelpText>
        <label>Lead Source</label>
        <picklist>
            <controllingField>Sales_Channel__c</controllingField>
            <picklistValues>
                <fullName>Inbound: Coursera network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound: Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound: Channel vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound: Identified organic usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound: Proactive outreach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Opportunity SF ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Negotiation_Next_Steps__c</fullName>
        <inlineHelpText>Summary of next steps needed in legal negotiation</inlineHelpText>
        <label>Legal Negotiation Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <description>Sums the # of licenses listed among products</description>
        <inlineHelpText>Sums the # of licenses listed among products</inlineHelpText>
        <label># Licenses</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Link_to_Google_Doc__c</fullName>
        <description>This URL field saves the google doc link related to deal desk.</description>
        <inlineHelpText>Google Doc URL for Deal Desk</inlineHelpText>
        <label>Link to Google Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loss_Reason_2__c</fullName>
        <label>Loss Reason 2</label>
        <picklist>
            <controllingField>Loss_Reason__c</controllingField>
            <picklistValues>
                <fullName>Customization needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of content category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length of content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanted to pay for the course not per learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too costly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skillsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pluralsight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Udemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Udacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Privacy Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Sharing Capabilities</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason 1</label>
        <picklist>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Urgent Need / Future Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer to WebSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_POC__c</fullName>
        <description>Main POC for B2B Opportunities</description>
        <label>Main POC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_discount_percentage__c</fullName>
        <description>Max discount percentage from line items</description>
        <inlineHelpText>Max discount percentage from line items</inlineHelpText>
        <label>Max Discount Percentage</label>
        <summarizedField>OpportunityLineItem.Discount</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Updated_By__c</fullName>
        <label>Next Steps Last Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Updated__c</fullName>
        <description>Automatically timestamps when the &apos;Next Steps&apos; above were last updated</description>
        <inlineHelpText>Automatically timestamps when the &apos;Next Steps&apos; above were last updated</inlineHelpText>
        <label>Next Steps Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_interest_from_PoC_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: topic or target not interesting to PoC or Instructor</description>
        <inlineHelpText>Checked if reasons for loss included: topic or target not interesting to PoC or Instructor</inlineHelpText>
        <label>Weak interest from PoC/Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_response_dormant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: partner was unresponsive to target.</description>
        <inlineHelpText>Checked if reasons for loss included: partner was unresponsive to target.</inlineHelpText>
        <label>No response/dormant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_details_on_loss__c</fullName>
        <description>Describe any additional commentary that would be useful in understanding why this target was lost</description>
        <inlineHelpText>Describe any additional commentary that would be useful in understanding why this target was lost</inlineHelpText>
        <label>Closed Lost Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Opps__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager_Email__c</fullName>
        <label>Opportunity Owner&apos;s Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <formula>Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source__c</fullName>
        <label>Original Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Amount__c</fullName>
        <label>Original Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss exclude any of the other possible reasons listed</description>
        <inlineHelpText>Checked if reasons for loss exclude any of the other possible reasons listed</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pilot_POC__c</fullName>
        <description>Is this a Pilot or Proof of Concept?</description>
        <inlineHelpText>Is this a Pilot or Proof of Concept?</inlineHelpText>
        <label>Pilot/POC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Possible_Whale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Whale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Target_ACV__c</fullName>
        <label>Potential Target ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <inlineHelpText>For B2B - add in details later</inlineHelpText>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Learner pre-pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Course Redemption (DEPRECATED)</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses (DEPRECATED)</fullName>
                <color>#000099</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>